finshed the form for the login and sign up page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Issue Tracker</title>
   </head>
-  <body class="bg-secondary-color">
+  <body class="bg-white-color">
     <div id="root" ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
